--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,7 +23,7 @@ jobs:
     - name: List Changed Files
       run: |
         all_py_files=$(git ls-files '*.py')
-        current_commit=${github.sha}
+        current_commit=${{ github.sha}}
         current_commit2=${GITHUB_SHA}
         changed_files=$(git diff --name-only --diff-filter=ACMRT ${{github.event.pull_request.base.sha}} ${{github.sha}})
         changed_files2=git diff --name-only HEAD^ HEAD
